--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.0.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vite": "^4.3.9",
+    "vitest": "^0.33.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -38,7 +39,6 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "prettier": "^2.8.8",
-    "vitest": "^0.33.0"
+    "prettier": "^2.8.8"
   }
 }
